OS dark mode support and some responsive fixes.

--- a/public/menu.css
+++ b/public/menu.css
@@ -153,8 +153,30 @@
 
 /* -- Some responsive stuff -- */
 /* On bigger screens - make menu button bigger */
+@media screen and (orientation: landscape) and (max-height: 600px) {
+    #menu .menu-trigger {
+        -webkit-transform: scale(1.5);
+            -ms-transform: scale(1.5);
+                transform: scale(1.5);
+        top: 3em;
+        right: 2em;
+    }
+    #menu-clickable-area {
+        -webkit-transform: scale(1.5);
+            -ms-transform: scale(1.5);
+                transform: scale(1.5);
+        top: 1.5em;
+        right: 1.5em;
+    }
+    #menu .menu-items.is-open {
+        font-size: calc(1vw + 1.5vh);
+        padding-left: 1.25em;
+    }
+}
 
-@media screen and (min-width: 799px) {
+
+@media screen and (min-width: 799px) and (min-height: 600px)
+{
     #menu .menu-trigger {
         -webkit-transform: scale(1.5);
             -ms-transform: scale(1.5);
